# scikit-multimodallearn

./: .gitlab-ci.yml  MANIFEST.in  README.rst  VERSION  copyright.py  copyrightstamp.txt  install_script.sh  license.txt  requirements.txt  setup.cfg  setup.py
doc/: conf.py  index.rst
doc/doccumbo/: conf.py  credits.rst  index.rst  install_devel.rst
doc/docmetricexamples/: demo.py  index.rst  tes-demo.py
doc/docmumbo/: api.rst  conf.py  credits.rst  index.rst  install_devel.rst
doc/reference/: api.rst
doc/tutorial/: credits.rst  estimator_template.rst  install_devel.rst  times.rst
docker/: Dockerfile_ubuntu_18.04  Dockerfile_ubuntu_22.04
examples/: README.txt  cumbo_plot_2_views_2_classes.py  cumbo_plot_3_views_3_classes.py  mumbo_plot_2_views_2_classes.py  mumbo_plot_3_views_3_classes.py
examples/combo/: README.txt  plot_combo_2_views_2_classes.py  plot_combo_3_views_3_classes.py
examples/cumbo/: README.txt  plot_cumbo_2_views_2_classes.py
examples/mumbo/: README.txt  plot_mumbo_2_views_2_classes.py  plot_mumbo_3_views_3_classes.py
examples/mvml/: README.txt  plot_mvml_.py
examples/usecase/: README.txt  __init__.py  plot_usecase_exampleMKL.py  plot_usecase_exampleMVML.py  plot_usecase_exampleMuComBo.py  plot_usecase_exampleMuCuBo.py  plot_usecase_exampleMumBo.py  usecase_example.py
multimodal/boosting/: __init__.py  boost.py  combo.py  cumbo.py  mumbo.py
multimodal/datasets/: __init__.py  base.py  data_sample.py  digit.py
multimodal/kernels/: __init__.py  lpMKL.py  mkernel.py  mvml.py
multimodal/tests/: test.py  test_combo.py  test_cumbo.py  (+4 more)
(+113 files in other folders)
