[metadata]
license_file = LICENSE.txt

[tool:pytest]
testpaths = multimodal
addopts = --verbose
          --cov-report=term-missing
          --cov-report=html
          --cov=multimodal
          --doctest-modules

[coverage:run]
branch = True
source = multimodal
include = */multimodal/*
omit = */tests/*
